--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hola coursera</title>
+	<style>
+		* {
+  			padding: 5px;
+  			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		}
+	</style>
 </head>
 <body>
 <h1>Hello Coursera!</h1>
