--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
 		* {
   			padding: 5px;
   			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  			color: blue;
 		}
 	</style>
 </head>
