--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hola coursera</title>
+	<link rel="icon" type="image/x-png" href="monkeyIcon.png">
 	<style>
 		* {
   			padding: 5px;
@@ -13,6 +14,10 @@
 	</style>
 </head>
 <body>
+<img src="rabbit1.png">
+<div>
 <h1>Hello Coursera!</h1>
+</div>
+
 </body>
 </html>
