--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 		* {
   			padding: 5px;
   			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  			color: blue;
+  			color: brown;
 		}
 	</style>
 </head>
