Module 2 Coding Assignment

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,9 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Module 2 Coding Assignment</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+<div style="text-align: center; font-size: 175%;">Nuestro Menú</div>
+
+<div class="row">
+
+  	<div class="col-lg-4 col-md-6 col-sm-12" id="container"><p><b>Section 1: </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span class="titulo" id="title1">Pollo</span></p></div>
+
+   	<div class="col-lg-4 col-md-6 col-sm-12" id="container"><p><b>Section 2: </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span class="titulo" id="title2">Beef</span></p></div>
+
+   	<div class="col-lg-4 col-md-12 col-sm-12" id="container"><p><b>Section 3: </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span class="titulo" id="title3">Pescado</span></p></div>
+
+</div>
 
 </body>
 </html>
