--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div style="text-align: center; font-size: 175%;">Nuestro Menú</div>
+<h1>Nuestro Menú</h1>
 
 <div class="row">
 
