--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -61,7 +61,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
           <section id="section-1">
-              <p>
+              <p id="texto">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit interdum, erat sodales imperdiet nunc tincidunt sociosqu sociis class felis, tortor nullam eget duis laoreet cubilia lacus. Tincidunt habitasse etiam semper mi nisi dictum primis, nulla feugiat elementum metus sem sed varius proin, ac pulvinar fusce rutrum est libero. Auctor condimentum feugiat tellus suspendisse nam in sociosqu ac, porta mollis tempus et felis massa a purus, morbi donec natoque id aptent dui fermentum.
 
                   Pellentesque laoreet inceptos mattis neque fringilla id tincidunt vel proin rutrum sociis nullam pulvinar, vestibulum interdum curabitur taciti ligula ullamcorper at molestie orci tristique ultrices platea. Suspendisse potenti primis lacinia auctor dis varius et interdum netus, habitant turpis convallis nec duis tellus nisi mauris phasellus fusce, imperdiet quam aptent curae integer nascetur magna senectus. Dictumst tristique pellentesque maecenas etiam faucibus euismod tempus tellus ante velit, suspendisse libero et mattis torquent parturient lectus litora ultrices, sapien vel rhoncus integer dui commodo cursus aliquam aptent.
