--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -6,9 +6,12 @@
   <script src="js/SpeakHello.js"></script>
   <script src="js/SpeakGoodBye.js"></script>
   <script src="js/script.js"></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
-  <h1>Module 4 Solution </h1>
-  <p> Open the console to see the output</p>
+  <h1>Module 4 Solución</h1>
+  <p>Open the console to see the output <b>[</b><span id="nota"> Abra la consola para ver la salida </span><b>]</b></p>
 </body>
 </html>
